--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
         <maven.compiler.target>8</maven.compiler.target>
 
         <!-- Dependencies Version-->
-        <sringframework.boot.version>2.4.4</sringframework.boot.version>
+        <sringframework.boot.version>2.4.0</sringframework.boot.version>
         <lombok.version>1.18.10</lombok.version>
         <h2database.version>1.4.200</h2database.version>
         <jersey.common.version>2.22.2</jersey.common.version>
         <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
+        <javax.validation.version>2.0.1.Final</javax.validation.version>
+        <spring.boot.maven.plug.inversion>2.4.3</spring.boot.maven.plug.inversion>
     </properties>
 
 </project>
